syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/mariobasic/simplebank/pb";

message User {
  string username = 1;
  string full_name = 2 [json_name = "full_name"];
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4  [json_name = "password_changed_at"];
  google.protobuf.Timestamp created_at = 5 [json_name = "created_at"];
}

